--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -27,5 +27,14 @@
         android:id="@+id/nav_marketplace"
         android:name="app.paseico.ui.marketplace.marketplaceFragment"
         android:label="@string/menu_searcher"
-        tools:layout="@layout/fragment_marketplace" />
+        tools:layout="@layout/fragment_marketplace" >
+        <action
+            android:id="@+id/action_nav_marketplace_to_discountsFragment"
+            app:destination="@id/discountsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/discountsFragment"
+        android:name="app.paseico.ui.marketplace.DiscountsFragment"
+        android:label="fragment_discounts"
+        tools:layout="@layout/fragment_discounts" />
 </navigation>
