--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -41,11 +41,11 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="40dp"
+        android:backgroundTint="@color/colorAccent"
         android:id="@+id/btn_follow"
         android:textColor="@color/colorPrimary"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
         android:visibility="gone"/>
 
 </RelativeLayout>
