Terminada la retención de información
La listview indica correctamente las POIs que ya han sido recorridas. Aparte de eso se han añadido las siguientes funcionalidades:
-No se puede clickar sobre la misma POI una vez la has completado (el sistema te avisa) y no enseña el camino
-Toda POI no completada y seleccionada estará en negrita
-El centrar al usuario constantemente ha sido quitado, solo centra al principio

PENDIENTE: CONECTAR CON DB, pero relativamente sencillo

--- a/app/src/main/res/layout/activity_runner_textview.xml
+++ b/app/src/main/res/layout/activity_runner_textview.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textPOI"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:hint="Nombres de ruta">
+        android:layout_height="wrap_content"
+        android:scaleY="1">
 
-    </TextView>
+        <TextView
+            android:id="@+id/textPOI"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:hint="Nombres de ruta"
+            android:scaleY="1.2"
+            android:text="TEXTO DE EJEMPLO"
+            android:translationX="5dp">
 
-</LinearLayout>
+        </TextView>
+
+    </LinearLayout>
