--- a/app/src/main/res/layout/fragment_notmyprofile.xml
+++ b/app/src/main/res/layout/fragment_notmyprofile.xml
@@ -104,12 +104,13 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/followers"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:layout_gravity="center"
                                 android:textSize="18sp"
+                                android:textAlignment="center"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -126,12 +127,13 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/following"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:layout_gravity="center"
                                 android:textSize="18sp"
+                                android:textAlignment="center"
                                 android:textStyle="bold"/>
 
                             <TextView
