--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -103,12 +103,13 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/followers"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:layout_gravity="center"
                                 android:textSize="18sp"
+                                android:textAlignment="center"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -125,12 +126,13 @@
                             android:orientation="vertical">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="60dp"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/following"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:layout_gravity="center"
                                 android:textSize="18sp"
+                                android:textAlignment="center"
                                 android:textStyle="bold"/>
 
                             <TextView
@@ -142,10 +144,10 @@
                     </LinearLayout>
 
                     <Button
+                        android:id="@+id/buttonLogOut"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:id="@+id/buttonLogOut" />
+                        android:layout_marginTop="2dp" />
 
                 </LinearLayout>
             </LinearLayout>
