--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,6 +31,9 @@
         <action
             android:id="@+id/action_nav_searchUsers_to_notMyProfileFragment"
             app:destination="@id/notMyProfileFragment" />
+        <action
+            android:id="@+id/action_nav_searchUsers_to_nav_profile"
+            app:destination="@id/nav_profile" />
     </fragment>
 
     <fragment
@@ -52,7 +55,7 @@
     <fragment
         android:id="@+id/notMyProfileFragment"
         android:name="app.paseico.ui.searchUsers.NotMyProfileFragment"
-        android:label="fragment_notmyprofile"
+        android:label="Perfil"
         tools:layout="@layout/fragment_notmyprofile" />
 
 </navigation>
