--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -115,7 +115,8 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="followers"/>
+                                android:text="followers"
+                                android:id="@+id/textView_Followers"/>
 
                         </LinearLayout>
 
@@ -138,7 +139,8 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="following"/>
+                                android:text="following"
+                                android:id="@+id/textView_Following"/>
 
                         </LinearLayout>
                     </LinearLayout>
