--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -8,7 +8,7 @@
     <LinearLayout
             android:orientation="vertical"
             android:layout_width="381dp"
-            android:layout_height="123dp">
+            android:layout_height="wrap_content">
         <TextView
                 android:text="Nombre Ruta"
                 android:layout_width="match_parent"
@@ -16,7 +16,7 @@
                 android:textStyle="bold" android:textColor="#000000"/>
         <TableLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                 <TextView
@@ -25,9 +25,13 @@
                         android:layout_height="wrap_content" android:id="@+id/textView9" android:paddingLeft="160dp"/>
                 <TextView
                         android:text="TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/routeDuration" android:paddingLeft="40dp"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content" android:id="@+id/routeDuration" android:paddingLeft="30dp"
                         android:textColor="#000000" android:paddingRight="0dp"/>
+                <TextView
+                        android:text="minutos"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" android:id="@+id/textView5" android:paddingLeft="10dp"/>
             </TableRow>
             <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                 <TextView
@@ -36,9 +40,13 @@
                         android:layout_height="wrap_content" android:id="@+id/textView11" android:paddingLeft="160dp"/>
                 <TextView
                         android:text="TextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/routeLenght" android:paddingLeft="40dp"
+                        android:layout_width="90dp"
+                        android:layout_height="match_parent" android:id="@+id/routeLenght" android:paddingLeft="30dp"
                         android:textColor="#000000" android:paddingRight="0dp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" android:id="@+id/textView6" android:text="metros"
+                        android:paddingLeft="10dp"/>
             </TableRow>
             <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
                 <TextView
@@ -48,7 +56,7 @@
                         android:textColor="#000000" android:paddingTop="5dp" android:paddingBottom="5dp"/>
                 <TextView
                         android:text="Puntos"
-                        android:layout_width="122dp"
+                        android:layout_width="90dp"
                         android:layout_height="match_parent" android:id="@+id/textView14" android:paddingTop="5dp"
                         android:paddingBottom="5dp"/>
             </TableRow>
