--- a/app/src/main/res/layout/fragment_user_created_routes.xml
+++ b/app/src/main/res/layout/fragment_user_created_routes.xml
@@ -2,6 +2,7 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".mainMenu.userCreatedRoutes.UserCreatedRoutesFragment">
@@ -21,7 +22,8 @@
             android:layout_gravity="bottom|center"
             android:text="Nueva Ruta"
             android:layout_marginBottom="683dp"
-            android:layout_marginEnd="275dp" android:layout_marginRight="275dp"
+            android:layout_marginEnd="275dp"
+            app:backgroundTint="@color/colorAccent"
     />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
