--- a/app/src/main/res/layout/activity_inf_modify_route.xml
+++ b/app/src/main/res/layout/activity_inf_modify_route.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ModifyRouteActivity">
+        tools:context=".RouteInfModifyActivity">
     <TextView
             android:id="@+id/textView_routeInfo_themeText3"
             android:layout_width="wrap_content"
