añadido fragment para mostrar rutas y navegabilidad

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -182,19 +182,7 @@
                     android:orientation="horizontal">
                 <!--This can be changed in the future-->
 
-                <ImageButton
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:id="@+id/my_routes"
-                        android:src="@drawable/ic_routes"/>
 
-                <ImageButton
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:id="@+id/achievements"
-                        android:src="@drawable/ic_achievements"/>
 
             </LinearLayout>
 
@@ -253,6 +241,15 @@
             android:text="XXX"
             android:textColor="#4E2D9E"
             android:textSize="26dp" />
+
+        <ImageButton
+            android:id="@+id/my_routes"
+            android:layout_width="341dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:src="@drawable/ic_routes" />
 
 
     </LinearLayout>
