--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -103,20 +103,20 @@
                                 android:orientation="vertical">
 
                             <TextView
-                                    android:layout_width="60dp"
-                                    android:layout_height="wrap_content"
-                                    android:id="@+id/followers"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:layout_gravity="center"
-                                    android:textSize="18sp"
-                                    android:textAlignment="center"
-                                    android:textStyle="bold"/>
+                                android:id="@+id/followers"
+                                android:layout_width="60dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
 
                             <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="followers"
-                                    android:id="@+id/textView_Followers"/>
+                                android:id="@+id/textView_Followers"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="followers" />
 
                         </LinearLayout>
 
@@ -127,20 +127,20 @@
                                 android:orientation="vertical">
 
                             <TextView
-                                    android:layout_width="60dp"
-                                    android:layout_height="wrap_content"
-                                    android:id="@+id/following"
-                                    android:textColor="@color/colorPrimaryDark"
-                                    android:layout_gravity="center"
-                                    android:textSize="18sp"
-                                    android:textAlignment="center"
-                                    android:textStyle="bold"/>
+                                android:id="@+id/following"
+                                android:layout_width="60dp"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:textAlignment="center"
+                                android:textColor="@color/colorPrimaryDark"
+                                android:textSize="18sp"
+                                android:textStyle="bold" />
 
                             <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:text="following"
-                                    android:id="@+id/textView_Following"/>
+                                android:id="@+id/textView_Following"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="following" />
 
                         </LinearLayout>
                     </LinearLayout>
@@ -192,10 +192,10 @@
     </ScrollView>
 
     <LinearLayout
-        android:layout_width="333dp"
+        android:layout_width="400dp"
         android:layout_height="300dp"
         android:layout_marginLeft="40dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="250dp"
         android:layout_marginRight="40dp"
         android:orientation="vertical">
 
@@ -216,7 +216,6 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:maxLines="1"
-            android:text="XX"
             android:textColor="#4E2D9E"
             android:textSize="26dp" />
 
@@ -238,7 +237,6 @@
             android:layout_marginTop="20dp"
             android:gravity="center"
             android:maxLines="1"
-            android:text="XXX"
             android:textColor="#4E2D9E"
             android:textSize="26dp" />
 
