--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -9,6 +9,11 @@
             android:orientation="vertical"
             android:layout_width="381dp"
             android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/imageViewIcon"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_alignParentTop="true" />
         <TextView
                 android:text="Nombre Ruta"
                 android:layout_width="match_parent"
