--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -81,8 +81,8 @@
 
                             <TextView
                                 android:id="@+id/posts"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                                android:layout_width="12dp"
+                                android:layout_height="match_parent"
                                 android:layout_gravity="center"
                                 android:textColor="@color/colorPrimaryDark"
                                 android:textSize="18sp"
