--- a/app/src/main/res/layout/activity_create_new_route.xml
+++ b/app/src/main/res/layout/activity_create_new_route.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".CreateNewRouteActivity">
+        tools:context=".mainMenu.userCreatedRoutes.CreateNewRouteActivity">
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/finalize_route_creation_button"
