--- a/app/src/main/res/layout/activity_route_information.xml
+++ b/app/src/main/res/layout/activity_route_information.xml
@@ -109,7 +109,7 @@
         android:layout_marginLeft="64dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="60dp"
-        android:text="@string/theme"
+        android:text="@string/category"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_routeInfo_nameOfRoute" />
 
