Añadido layout básico de la nueva actividad para introducir los datos del a nueva Ruta

--- a/app/src/main/res/layout/activity_introduce_new_route_data.xml
+++ b/app/src/main/res/layout/activity_introduce_new_route_data.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,4 +7,54 @@
         android:layout_height="match_parent"
         tools:context=".mainMenu.userCreatedRoutes.IntroduceNewRouteDataActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/introduce_new_route_data_toolbar"
+                android:background="@color/emphasizedBackground"/>
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/route_name_textField"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/route_name"
+                android:gravity="center"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="20dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/route_name_textInputEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/category_without_colon"
+                    android:id="@+id/textView8"
+                    android:textSize="@dimen/text_field_label_font_size"
+                    android:layout_marginTop="50dp"
+                    android:layout_marginEnd="80dp"
+                    android:layout_marginStart="25dp"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+            android:id="@+id/finalize_route_creation_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_gravity="bottom|center"
+            android:text="@string/finalize"
+            android:textColor="@color/white"
+            app:backgroundTint="@color/colorAccent"/>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
