--- a/app/src/main/res/layout/activity_route_information.xml
+++ b/app/src/main/res/layout/activity_route_information.xml
@@ -6,6 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".RouteInformationActivity">
 
+    <ImageView
+        android:id="@+id/imageViewIconRouteInformation"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="52dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView_routeInfo_themeText"
+        app:layout_constraintEnd_toStartOf="@+id/textView_routeInfo_nameOfRoute"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView_routeInfo_themeText3"
         android:layout_width="wrap_content"
@@ -98,9 +112,10 @@
         android:layout_height="45dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.831"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.153" />
+        app:layout_constraintVertical_bias="0.083" />
 
     <TextView
         android:id="@+id/textView_routeInfo_themeText"
