mejorada interfaz resultados de busqueda

--- a/app/src/main/res/layout/item_route_search.xml
+++ b/app/src/main/res/layout/item_route_search.xml
@@ -24,19 +24,31 @@
                 android:layout_alignParentTop="true" />
 
             <TextView
+                android:id="@+id/textViewWhite"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:paddingLeft="150dp"/>
+
+            <TextView
                 android:id="@+id/routeName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nombre Ruta"
+                android:layout_gravity="center"
                 android:textColor="#000000"
                 android:textSize="20sp"
                 android:textStyle="bold" />
+
+
+
         </TableRow>
 
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+
 
 
             <TableRow
