--- a/app/src/main/res/layout/activity_register_organization.xml
+++ b/app/src/main/res/layout/activity_register_organization.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="Nombre de la organización"
+        android:hint="@string/nombre_de_la_organizaci_n"
         android:inputType="textPersonName"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,7 +30,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="Contraseña"
+        android:hint="@string/contrase_a"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
-        android:hint="Repita la contraseña"
+        android:hint="@string/repita_la_contrase_a"
         android:inputType="textPassword"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
