Implementado Realizar Ruta ordenada (Realizar ruta)
Faltan detalles estéticos. NOTA: Se está tratando de implementar una optimización importante de código. Puede ser costoso por temas de herencia genérica de ArrayLists. Dentro de RouteInformationActivity se ha añadido un pequeño if ternario para determinar a cual de las dos clases irá la Activity, según si es ordenada o no.

--- a/app/src/main/res/layout/activity_route_runner_ordered.xml
+++ b/app/src/main/res/layout/activity_route_runner_ordered.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RouteRunnerNotOrderedActivity">
+    tools:context=".RouteRunnerOrderedActivity">
 
     <fragment
         android:id="@+id/map"
@@ -18,15 +18,17 @@
         tools:context=".MainActivity" />
 
 
-
-    <ListView
+    <TextView
         android:id="@+id/TextNextRoute"
         android:layout_width="0dp"
         android:layout_height="150dp"
+        android:gravity="center"
+        android:text="TEXTO RUTA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/map" />
 
     <TextView
         android:id="@+id/textViewTitleRoutingActivity"
