--- a/app/src/main/res/layout/activity_route_runner_ordered.xml
+++ b/app/src/main/res/layout/activity_route_runner_ordered.xml
@@ -23,7 +23,9 @@
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:gravity="center"
-        android:text="TEXTO RUTA"
+        android:text="Cargando..."
+        android:textSize="30dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
